syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";


message PrimeNumberDecompositionRequest {
  int64 number = 1;
}

message PrimeNumberDecompositionResponse {
  int64 prime_factor = 1;
}

message ComputeAverageRequest {
  int32 number = 1;
}

message ComputeAverageResponse {
  double average = 1;
}



service CalculatorService {
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
}